# companion-memory

./: .env.test  .gitignore  CLAUDE.md  Dockerfile  SPEC.md  SUMMARY.md  TODO.md  fly.toml  gunicorn.conf.py  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: claude-rules.mdc
.github/workflows/: fly-deploy.yml
scripts/: fulltests.sh  runtests.sh
specs/: 2025-07-014-HEARTBEAT_TODO.md  2025-07-11-DAILY_SUMMARY_SPEC.md  2025-07-11-DAILY_SUMMARY_TODO.md  2025-07-11-JOB-SCHEDULER-TODO.md  2025-07-11-JOB-SCHEDULER.md  2025-07-12-WORK_SAMPLING_SPEC.md  2025-07-12-WORK_SAMPLING_TODO.md  2025-07-14-HEARTBEAT_SPEC.md  2025-07-14-SUMMARY_TASK_SPEC.md  2025-07-14-SUMMARY_TASK_TODO.md
src/companion_memory/: __init__.py  app.py  cli.py  commands.py  daily_summary_scheduler.py  deduplication.py  exceptions.py  heartbeat.py  job_dispatcher.py  job_models.py  job_table.py  job_worker.py  llm_client.py  retry_policy.py  scheduler.py  slack_auth.py  storage.py  summarizer.py  summary_jobs.py  user_settings.py  user_sync.py  work_sampling_handler.py  work_sampling_scheduler.py  wsgi.py
tests/: test_cli.py  test_commands.py  test_daily_summary_scheduler.py  test_deduplication.py  test_exceptions.py  test_flask_app.py  test_heartbeat.py  test_job_dispatcher.py  test_job_integration.py  test_job_models.py  test_job_table.py  test_job_worker.py  test_job_worker_cli.py  test_llm_client.py  test_log_store.py  test_retry_policy.py  test_scheduler.py  test_sentry_integration.py  test_slack_auth.py  test_storage_dynamo.py  test_summarizer.py  test_summary_jobs.py  test_user_settings.py  test_user_sync.py  test_work_sampling_handler.py  test_work_sampling_scheduler.py  test_wsgi.py
