[project]
name = "companion-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eykd", email = "david@worldsenoughstudios.com" }
]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "boto3>=1.39.3",
    "click>=8.1.0",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "llm>=0.26",
    "llm-anthropic>=0.1.0",
    "python-dotenv>=1.1.1",
    "sentry-sdk[flask]>=2.32.0",
    "slack-sdk>=3.35.0",
]

[project.scripts]
comem = "companion_memory.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
package = true

[tool.uv.build-backend]
module-root = "src"


[tool.ruff]
# Python linter & formatter
# https://docs.astral.sh/ruff/
line-length = 120
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
preview = true

# https://docs.astral.sh/ruff/rules/
select = [
    "A",      # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ANN",    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ARG",    # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "ASYNC",  # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B",      # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "BLE",    # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "C4",     # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C90",    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "COM",    # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "D",      # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "DJ",     # https://docs.astral.sh/ruff/rules/#flake8-django-dj
    "DTZ",    # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "E",      # https://docs.astral.sh/ruff/rules/#error-e
    "EM",     # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "ERA",    # https://docs.astral.sh/ruff/rules/#eradicate-era
    "EXE",    # https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "FBT",    # https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
    "FLY",    # https://docs.astral.sh/ruff/rules/#flynt-fly
    "FURB",   # https://docs.astral.sh/ruff/rules/#refurb-furb
    "G",      # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "ICN",    # https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
    "INP",    # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
    "INT",    # https://docs.astral.sh/ruff/rules/#flake8-gettext-int
    "ISC",    # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "LOG",    # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "N",      # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PERF",   # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PGH",    # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PIE",    # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    # "PL",   # https://docs.astral.sh/ruff/rules/#pylint-pl
    "PT",     # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH",    # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "PYI",    # https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "Q",      # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET",    # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE",    # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF",    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "S",      # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM",    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF",    # https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SLOT",   # https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T10",    # https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    "T20",    # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "TCH",    # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "TD",     # https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "TID",    # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TRY",    # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W",      # https://docs.astral.sh/ruff/rules/#warning-w
    "YTT",    # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]


ignore = [
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "D105",   # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D106",   # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class/
    "D107",   # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "D203",   # https://docs.astral.sh/ruff/rules/one-blank-line-before-class/
    "D213",   # https://docs.astral.sh/ruff/rules/multi-line-summary-second-line/
    "D400",   # https://docs.astral.sh/ruff/rules/ends-in-period/
    "D401",   # https://docs.astral.sh/ruff/rules/non-imperative-mood/
    "D404",   # https://docs.astral.sh/ruff/rules/docstring-starts-with-this/
    "D415",   # https://docs.astral.sh/ruff/rules/ends-in-punctuation/
    "E501",   # https://docs.astral.sh/ruff/rules/line-too-long/
    "EM101",  # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "FURB189", # https://docs.astral.sh/ruff/rules/subclass-builtin/
    "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
    "TD002",  # https://docs.astral.sh/ruff/rules/missing-todo-author/
    "TD003",  # https://docs.astral.sh/ruff/rules/missing-todo-link/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/test*.py" = [
    "S101",
    "D1",
    "INP001",
    "ARG001",
    "ARG002",
]


"tests/**/conftest.py" = [
    "S101",
    "D1",
    "INP001",
    "ARG001",
]

"src/companion_memory/app.py" = [
    "C901",  # Function too complex (create_app handles many routes)
]


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.format]
preview = true

quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false


[tool.pytest.ini_options]
# The best Python test runner
# https://docs.pytest.org/en/latest/contents.html

testpaths = ["tests/"]

addopts = [
    "--cov",
    "--cov-report=term:skip-covered",
    "--no-cov-on-fail",
    "--strict-markers",
    "--strict-config",

]

markers = [
    # If you have slow tests that you want to exclude, mark them like so:
    #     @pytest.mark.slow
    #     def test_my_slow_test():
    #         # ...
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]


[tool.coverage.run]
# Python test coverage tool
# https://coverage.readthedocs.io/
plugins = [
]
branch = true
source = ['src']
omit = [
     'tests/*.py',
     'src/companion_memory/wsgi.py',
     ]
[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict = true
plugins = []
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "slack_sdk.*",
    "apscheduler.*",
    "llm.*",
    "sentry_sdk.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipython>=9.4.0",
]
test = [
    "moto[dynamodb]>=5.0.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-randomly>=3.16.0",
    "ruff>=0.12.2",
]
